fix: z-index issue

--- a/components/Landing/Navbar/HamBtn/HamMenu/hamMenu.module.scss
+++ b/components/Landing/Navbar/HamBtn/HamMenu/hamMenu.module.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   scale: 0.1;
-  z-index: 5111;
+  z-index: 51210;
   top: -8%;
   right: -40%;
 
@@ -92,7 +92,7 @@
 .mobileHamMenuLines {
   position: absolute;
   scale: 0.35;
-  z-index: 5121;
+  z-index: 51210;
   width: 100%;
   height: 100%;
 
